Fix alignment of add-relationship buttons

--- a/root/static/styles/forms.less
+++ b/root/static/styles/forms.less
@@ -593,7 +593,9 @@ div.rel-editor-dialog {
     button.add-item {
         padding-top: 4px;
         padding-bottom: 4px;
-        margin-left: 2em;
+        margin-top: -4px;
+        margin-bottom: 4px;
+        margin-left: 40px;
     }
 
     legend button.add-item {
